html page completed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <div class="left">
                 <h1>Campo Minato</h1>
             </div>
+            <div id="score"></div>
+            <div id="result"></div>
             <div class="right">
                 <button>Play</button>
             </div>
